--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Gamma: Photo Sharing App</title>
+    <title>Gamma: Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -31,79 +31,61 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    <!-- The inside of this jumbotron has a single row that is split into two columns of 6 -->
-    <div class="jumbotron">
-      <div class='container'>
-        <!-- row -->
-        <div class='row'>
-          <!-- column 1 = 6 length -->
-          <div class='col-md-5 col-md-offset-1'>
-            <h1>Capture <span class='em-text'>Life</span></h1>
-            <p>A fun and easy way to capture & share the moments you live for</p>
-            <a href="#"><img class='app-btn' src='assets/img/icon_app_store.png'></a>
-            <a href="#"><img class='app-btn' src='assets/img/icon_google_play.png'></a>
-          </div>
-          <!-- column 2 = 6 length -->
-          <div class='col-md-6'>
-            <img class='showcase-img' src="assets/img/site_phone.png">
-          </div>
-        </div>
-     </div>
-   </div>
 
-
-    <section id='middle'>
+    <section id='title-bar'>
       <div class='container'>
         <div class='row'>
-          <div class='col-md-4'>
-            <img src="assets/img/demo1.jpg" class='demo'>
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur imperdiet sagittis. Integer pretium bibendum lorem, vitae congue quam convallis.</p>
-            <a href="#" class='btn btn-default'>Read More</a>
-          </div>
-          <div class='col-md-4'>
-             <img src="assets/img/demo2.jpg" class='demo'>
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur imperdiet sagittis. Integer pretium bibendum lorem, vitae congue quam convallis.</p>
-            <a href="#" class='btn btn-default'>Read More</a>
-          </div>
-          <div class='col-md-4'>
-             <img src="assets/img/demo3.jpg" class='demo'>
-            <h2>Lorem Ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur imperdiet sagittis. Integer pretium bibendum lorem, vitae congue quam convallis.</p>
-            <a href="#" class='btn btn-default'>Read More</a>
-          </div>
-        </div>
-      </div>
-    </section>  
-
-    <section id='feature'>
-      <div class='container'>
-        <div class='row'>
-          <div class='col-md-4 col-md-offset-1'>
-            <h1>Gamma Features</h1>
-            <ul>
-              <li> <i class='glyphicon glyphicon-ok'></i> Nulla tempor nisi</li>
-              <li><i class='glyphicon glyphicon-ok'></i> Pellentesque ex sodales</li>
-              <li><i class='glyphicon glyphicon-ok'></i> Cras orci augue</li>
-              <li><i class='glyphicon glyphicon-ok'></i> Sollicitudin a placerat at</li>
-              <li><i class='glyphicon glyphicon-ok'></i> Lobortis sit amet lacus</li>
-            </ul>
-          </div>
-          <div class='col-md-4 col-md-offset-2'>
-            <img src="assets/img/logo.png" class="big-logo">
+          <div class='col-md-12'>
+            <h1>Contact Us</h1>
           </div>
         </div>
       </div>
     </section>
+
+
+
+    <section id='contact'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-md-8'>
+            <!-- BASIC FORM -->
+            <form>
+              <div class="form-group">
+                <label>Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter Name">
+              </div>
+              <div class="form-group">
+                <label>Company Name</label>
+                <input type="text" class="form-control" id="company-name" placeholder="Enter Company Name">
+              </div>
+              <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter Email">
+              </div>
+              <div class="form-group">
+                <label>Message</label>
+                <textarea class='form-control' placeholder="Enter Message"></textarea>
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+          </div>
+          <div class='col-md-4'>
+             <img src="assets/img/demo1.jpg" class='demo'>
+            <h2>Lorem Ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur imperdiet sagittis. Integer pretium bibendum lorem, vitae congue quam convallis.</p>
+            <a href="#" class='btn btn-default' id='submit-btn'>Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>  
 
     <footer>
       <div class='container'>
